Team alignment fix

--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -2,33 +2,19 @@ h2{
     text-align: center;
 }   
 .card-row-1{
-    /*padding-left: 7em;
-    padding-right: 6em;*/
-    align-items: center;
-    flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom:2em;
+  margin-bottom: 2em;
 }
+
 .card-row-2{
-    /*padding-left: 7em;
-    padding-right: 6em;*/
-    align-items: center;
-    flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom:2em;
+  text-align: center;
+  margin-bottom: 2em;
 }
 
 .card-row-3{
-    /*padding-left: 7em;
-    padding-right: 6em;*/
-    align-items: center;
-    flex-wrap: wrap;
-  justify-content: center;
+  text-align: center;
   margin-bottom:2em;
 }
-.card{
-   margin-right: 3em;
-}
+
 .social{
   border: none;
 }
@@ -40,12 +26,12 @@ h2{
   }
 
 .card1{
-  width:10em;
+  max-width: 355px;
+  border-width: 1px;
 }
 
 .picture{
-  margin-left:2.5em;
-  height:13em;
-  width:13em;
-  
+  margin-bottom: 30px;
+  height: 13em;
+  width: 13em;
 }
